--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,13 @@ body {
   height: auto;
   margin-top: 27px;
 }
+@media (max-width: 1650px) {
+  .wrapper .page .page-1 .page-1__get-inspiration .get-inspiration__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 .wrapper .page .page-2 .page-2__container {
   margin-bottom: 150px;
 }
@@ -366,11 +373,61 @@ body {
 .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .carts__item .item__img {
   width: 100%;
 }
-@media (max-width: 1498px) {
+.wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__h2-title {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+.wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__text {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+.wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__img {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+@media (max-width: 1005px) {
+  .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__h2-title {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__text {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts .item-reverse .item__img {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+}
+@media (max-width: 1500px) {
   .wrapper .page .page-4 .page-4__our-project .our-project__container .our-project__carts {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .wrapper .page .page-5 .page-5__testimonial .testimonial__container {
@@ -453,12 +510,24 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.wrapper .page .page-5 .page-5__testimonial .testimonial__container .testimonial__statistics .statistics__content .content__statistic span {
-  font-weight: 800;
-  font-size: 70px;
-}
 .wrapper .page .page-5 .page-5__testimonial .testimonial__container .testimonial__statistics .statistics__content .content__statistic .statistic__item {
   margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+.wrapper .page .page-5 .page-5__testimonial .testimonial__container .testimonial__statistics .statistics__content .content__statistic .statistic__item span {
+  font-weight: 800;
+  font-size: 70px;
+  margin-bottom: 10px;
 }
 .wrapper .page .page-5 .page-5__testimonial .testimonial__container .testimonial__statistics .statistics__content .content__statistic .content__subtitle {
   margin-bottom: 62px;
@@ -563,6 +632,13 @@ body {
 @media (max-width: 767px) {
   .wrapper .page .page-6 .page-6__contact-us .contact-us__container .contact-us__form-block {
     padding: 25px 25px;
+  }
+}
+@media (max-width: 1550px) {
+  .wrapper .page .page-6 .page-6__contact-us .contact-us__container {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
