--- a/css/style.css
+++ b/css/style.css
@@ -626,7 +626,7 @@ body {
   min-width: 250px;
   width: 50%;
   max-height: 250px;
-  max-width: 700px;
+  max-width: 100%;
   margin-bottom: 20px;
   font-size: 25px;
 }
